force-app/main/default/objects/Case/fields/Product_Versions__c.field-meta.xml
<CustomField>
    <fullName>Product_Versions__c</fullName>
    <inlineHelpText>To find the product version, please go to the bottom right corner of the web application and look for &quot;© 2017 Intapp, Inc.&quot;. Hover your mouse over the ©  symbol and it will display the version.</inlineHelpText>
    <label>Product Version</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>2001</fullName>
            </value>
            <value>
                <fullName>2002</fullName>
            </value>
            <value>
                <fullName>2003</fullName>
            </value>
            <value>
                <fullName>2004</fullName>
            </value>
            <value>
                <fullName>2007</fullName>
            </value>
            <value>
                <fullName>2009.x</fullName>
            </value>
            <value>
                <fullName>2010.x</fullName>
            </value>
            <value>
                <fullName>2.x</fullName>
            </value>
            <value>
                <fullName>3.x</fullName>
            </value>
            <value>
                <fullName>4.x</fullName>
            </value>
            <value>
                <fullName>4.18</fullName>
            </value>
            <value>
                <fullName>4.18 MR2</fullName>
            </value>
            <value>
                <fullName>4.19</fullName>
            </value>
            <value>
                <fullName>4.19 MR1</fullName>
            </value>
            <value>
                <fullName>4.20</fullName>
            </value>
            <value>
                <fullName>4.21</fullName>
            </value>
            <value>
                <fullName>3.0.x</fullName>
            </value>
            <value>
                <fullName>3.1.x</fullName>
            </value>
            <value>
                <fullName>3.2.x</fullName>
            </value>
            <value>
                <fullName>3.3.x</fullName>
            </value>
            <value>
                <fullName>3.4.x</fullName>
            </value>
            <value>
                <fullName>4.9.x</fullName>
            </value>
            <value>
                <fullName>5.x</fullName>
            </value>
            <value>
                <fullName>6.0</fullName>
            </value>
            <value>
                <fullName>6.0.x</fullName>
            </value>
            <value>
                <fullName>6.1.x</fullName>
            </value>
            <value>
                <fullName>6.2.x</fullName>
            </value>
            <value>
                <fullName>6.3.x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>