force-app/main/default/objects/Case/fields/ProductEnvironment__c.field-meta.xml
<CustomField>
    <fullName>ProductEnvironment__c</fullName>
    <description>Maps to Environment Field in JIRA. Update per JIRA guidelines.</description>
    <inlineHelpText>Maps to Environment Field in JIRA. Update per JIRA guidelines.</inlineHelpText>
    <label>Environment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>