force-app/main/default/objects/Case/fields/Project_Escalation_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Escalation_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SC-000036</description>
    <label>Project Escalation:  CSM Account Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Project Escalation: Contact Name)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>