force-app/main/default/objects/Case/fields/Project_Exp_Compl_Date_Prior__c.field-meta.xml
<CustomField>
    <fullName>Project_Exp_Compl_Date_Prior__c</fullName>
    <description>This is a hidden field and used to store the previous value of the Estimated Completion Date prior to it&apos;s most recent change.  This is used in the E-Mail Alerts which are sent when the main field changes.</description>
    <label>Project - Exp Compl Date - Prior</label>
    <type>Date</type>
</CustomField>