force-app/main/default/objects/Case/fields/Project_Exp_Rev_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Exp_Rev_Rec_Date__c</fullName>
    <defaultValue>DATE(2099,9,9)</defaultValue>
    <description>If date is in the past - this is the date revenue was recognized.
If date is in the future - this is when we are projecting revenue to be recognized.</description>
    <inlineHelpText>If date is in the past - this is the date revenue was recognized.
If date is in the future - this is when we are projecting revenue to be recognized.</inlineHelpText>
    <label>Revenue Recognition Date</label>
    <type>Date</type>
</CustomField>