force-app/main/default/objects/Case/fields/PSCase_Atty_Sec_Pairing_Source__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Atty_Sec_Pairing_Source__c</fullName>
    <label>Atty/Sec Pairing Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PeopleSoft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>