force-app/main/default/objects/Case/fields/PSCase_Commercial_Risk__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Commercial_Risk__c</fullName>
    <label>Commercial Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>