force-app/main/default/objects/Case/fields/PSCase_Confidence_in_Completion__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Confidence_in_Completion__c</fullName>
    <description>This is the Project Manager&apos;s assessment as to if the Estimated Completion Date will be hit.  This field is key in generating the Profesional Services Forecast reports.</description>
    <label>Confidence in Completion Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>