force-app/main/default/objects/Case/fields/PSCase_Deployment_Compl_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Deployment_Compl_Date__c</fullName>
    <inlineHelpText>For CID: when CID is completed
For TB: when roll-out is completed
For Others: Go-Live</inlineHelpText>
    <label>Deployment - Completion Date</label>
    <type>Date</type>
</CustomField>