force-app/main/default/objects/Case/fields/PSCase_DMS_Library_Count__c.field-meta.xml
<CustomField>
    <fullName>PSCase_DMS_Library_Count__c</fullName>
    <label>DMS Library Count</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-9</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
            </value>
            <value>
                <fullName>20+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>