force-app/main/default/objects/Case/fields/PSCase_DMS_SM__c.field-meta.xml
<CustomField>
    <fullName>PSCase_DMS_SM__c</fullName>
    <description>DMS Self Maintaining</description>
    <label>DMS SM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iManage 8.x</fullName>
            </value>
            <value>
                <fullName>Open Text DM5</fullName>
            </value>
            <value>
                <fullName>NetDocuments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>