force-app/main/default/objects/Case/fields/PSCase_Financial_Security__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Financial_Security__c</fullName>
    <label>Financial Security</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aderant CMS</fullName>
            </value>
            <value>
                <fullName>Carpe Diem</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>Elite WebView (5.3+)</fullName>
            </value>
            <value>
                <fullName>TimeKM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>