force-app/main/default/objects/Case/fields/PSCase_Implementation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Implementation_Completion_Date__c</fullName>
    <inlineHelpText>For CID: date of the 2hr IB training
For Others: when installation is complete &amp; ready to train</inlineHelpText>
    <label>Installation - Completion Date</label>
    <type>Date</type>
</CustomField>