force-app/main/default/objects/Case/fields/PSCase_Project_Exp_Compl_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Project_Exp_Compl_Date__c</fullName>
    <defaultValue>DATE(2099,9,9)</defaultValue>
    <description>This is the expected date the project will complete.  This field is key in generating the Profesional Services Forecast reports.</description>
    <label>Project - Exp Compl Date</label>
    <type>Date</type>
</CustomField>