force-app/main/default/objects/Case/fields/PSCase_Project_Exp_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Project_Exp_Start_Date__c</fullName>
    <label>Project - Exp Start Date</label>
    <type>Date</type>
</CustomField>