force-app/main/default/objects/Case/fields/PSCase_Wall_Import_Source__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Wall_Import_Source__c</fullName>
    <label>Wall Import Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LegalKEY</fullName>
            </value>
            <value>
                <fullName>WincWall</fullName>
            </value>
            <value>
                <fullName>Accutrac</fullName>
            </value>
            <value>
                <fullName>FileSurf</fullName>
            </value>
            <value>
                <fullName>DM Groups</fullName>
            </value>
            <value>
                <fullName>AMH Walls</fullName>
            </value>
            <value>
                <fullName>Wall Builder Upgrade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>