force-app/main/default/objects/Case/fields/PSCaseAT_Document_Management_System__c.field-meta.xml
<CustomField>
    <fullName>PSCaseAT_Document_Management_System__c</fullName>
    <label>Document Management System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autonomy iManage</fullName>
            </value>
            <value>
                <fullName>Open Text DocsOpen</fullName>
            </value>
            <value>
                <fullName>Open Text DM5</fullName>
            </value>
            <value>
                <fullName>NetDocuments</fullName>
            </value>
            <value>
                <fullName>Other DMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>