force-app/main/default/objects/Case/fields/PSCaseCID_IB_2_hour_training_date__c.field-meta.xml
<CustomField>
    <fullName>PSCaseCID_IB_2_hour_training_date__c</fullName>
    <label>IB 2-hour training date</label>
    <type>Date</type>
</CustomField>