force-app/main/default/objects/Case/fields/PSCaseTB_CRM_Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_CRM_Contact_Source__c</fullName>
    <inlineHelpText>If you will be integrating your contacts with Time Builder, select the master source to use for contact data from the drop-down list.</inlineHelpText>
    <label>CRM Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exchange 2010/2007 Contacts</fullName>
            </value>
            <value>
                <fullName>Exchange 2003 Contacts</fullName>
            </value>
            <value>
                <fullName>InterAction Contacts</fullName>
            </value>
            <value>
                <fullName>CRM Integration Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>