force-app/main/default/objects/Case/fields/PSCaseTB_desktop_spreadsheet_software__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_desktop_spreadsheet_software__c</fullName>
    <inlineHelpText>Select the desktop spreadsheet software used in your organization from the drop-down list.</inlineHelpText>
    <label>Select desktop spreadsheet software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excel 2010</fullName>
            </value>
            <value>
                <fullName>Excel 2007</fullName>
            </value>
            <value>
                <fullName>Excel 2003</fullName>
            </value>
            <value>
                <fullName>Other desktop spreadsheet software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>