force-app/main/default/objects/Case/fields/PSCaseTB_Select_BlackBerry_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_BlackBerry_OS_Version__c</fullName>
    <inlineHelpText>If you will be integrating BlackBerry devices with Time Builder, select the BlackBerry OS version used in your organization from the drop-down list.</inlineHelpText>
    <label>Select BlackBerry OS Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BlackBerry - OS 4.2 or later</fullName>
            </value>
            <value>
                <fullName>BlackBerry - OS 4.0 or later</fullName>
            </value>
            <value>
                <fullName>BlackBerry Capture Not Required</fullName>
                <default>true</default>
                <label>BlackBerry Capture Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>