force-app/main/default/objects/Case/fields/PSCaseTB_Select_desktop_browser_software__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_desktop_browser_software__c</fullName>
    <inlineHelpText>Select the desktop web browser software used in your organization from the drop-down list.</inlineHelpText>
    <label>Select desktop web browser software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet Explorer 9/8/7</fullName>
            </value>
            <value>
                <fullName>Mozilla Firefox 4</fullName>
            </value>
            <value>
                <fullName>Mozilla Firefox 3.x</fullName>
            </value>
            <value>
                <fullName>Other web browser software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>