force-app/main/default/objects/Case/fields/PSCaseTB_Select_desktop_operating_system__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_desktop_operating_system__c</fullName>
    <inlineHelpText>Select the desktop operating system used in your organization from the drop-down list.</inlineHelpText>
    <label>Select desktop operating system</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows Vista</fullName>
            </value>
            <value>
                <fullName>Windows XP</fullName>
            </value>
            <value>
                <fullName>Other operating system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>