force-app/main/default/objects/Case/fields/PSCaseTB_Select_digital_dictation_system__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_digital_dictation_system__c</fullName>
    <inlineHelpText>Select your digital dictation system from the drop-down list.</inlineHelpText>
    <label>Select digital dictation system</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big Hand</fullName>
            </value>
            <value>
                <fullName>Winscribe</fullName>
            </value>
            <value>
                <fullName>nFlow</fullName>
            </value>
            <value>
                <fullName>Other digital dictation system</fullName>
            </value>
            <value>
                <fullName>Digital Dictation Not Required</fullName>
                <default>true</default>
                <label>Digital Dictation Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>