force-app/main/default/objects/Case/fields/PSCaseTB_Select_time_entry_system__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_time_entry_system__c</fullName>
    <inlineHelpText>Select your time entry system from the drop-down list.</inlineHelpText>
    <label>Select time entry system</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elite 3E</fullName>
            </value>
            <value>
                <fullName>Elite WebView</fullName>
            </value>
            <value>
                <fullName>Aderant Expert/CMS.NET</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>DTE 2007/2004</fullName>
            </value>
            <value>
                <fullName>Tikit Carpe Diem Classic 2010/4.x-4.7x</fullName>
            </value>
            <value>
                <fullName>Tikit Carpe Diem Enterprise/TimeKM 5.x/6.x</fullName>
            </value>
            <value>
                <fullName>Rippe &amp; Kingston LMS</fullName>
            </value>
            <value>
                <fullName>Other time entry system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>