force-app/main/default/objects/Case/fields/PSCaseTBPR_Rollout_start_date__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTBPR_Rollout_start_date__c</fullName>
    <label>Rollout start date</label>
    <type>Date</type>
</CustomField>