force-app/main/default/objects/Case/fields/RAG_Statuses__c.field-meta.xml
<CustomField>
    <fullName>RAG_Statuses__c</fullName>
    <label>RAG Statuses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>