force-app/main/default/objects/Case/fields/Replacement_Appliance_Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Appliance_Shipping_Company__c</fullName>
    <label>Replacement Appliance Shipping Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
                <default>true</default>
                <label>FedEx</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>