force-app/main/default/objects/Case/fields/Revenue_Recognition_Delay__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there a delay between closing the case and recognizing PS Revenue?</description>
    <inlineHelpText>Check if there is a delay between closing the case and recognizing revenue.</inlineHelpText>
    <label>Revenue Recognition Delay</label>
    <type>Checkbox</type>
</CustomField>