force-app/main/default/objects/Case/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bob Schick</fullName>
            </value>
            <value>
                <fullName>Colby Smith</fullName>
            </value>
            <value>
                <fullName>Dan Bressler</fullName>
            </value>
            <value>
                <fullName>Dan Gill</fullName>
            </value>
            <value>
                <fullName>Don Coleman</fullName>
            </value>
            <value>
                <fullName>Eldean Ward</fullName>
            </value>
            <value>
                <fullName>Joe Welch</fullName>
            </value>
            <value>
                <fullName>John Hall</fullName>
            </value>
            <value>
                <fullName>Kandace Donovan</fullName>
            </value>
            <value>
                <fullName>Kathy Englar</fullName>
            </value>
            <value>
                <fullName>Kathy Kibby</fullName>
            </value>
            <value>
                <fullName>Kelly Graves</fullName>
            </value>
            <value>
                <fullName>Kerry Stivaletti</fullName>
            </value>
            <value>
                <fullName>Kyle Alisharan</fullName>
            </value>
            <value>
                <fullName>Mark Winders</fullName>
            </value>
            <value>
                <fullName>Neal Vora</fullName>
            </value>
            <value>
                <fullName>Pat Archbold</fullName>
            </value>
            <value>
                <fullName>Ryan Ladisic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>