force-app/main/default/objects/Case/fields/SCRUM_Escalated__c.field-meta.xml
<CustomField>
    <fullName>SCRUM_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCRUM Escalated</label>
    <type>Checkbox</type>
</CustomField>