force-app/main/default/objects/Case/fields/Services_Expiration_1__c.field-meta.xml
<CustomField>
    <fullName>Services_Expiration_1__c</fullName>
    <formula>Contract_Number_Link_1__r.Services_Expiration__c</formula>
    <label>Services Expiration 1</label>
    <type>Date</type>
</CustomField>