force-app/main/default/objects/Case/fields/Services_Expiration_Amendment_2__c.field-meta.xml
<CustomField>
    <fullName>Services_Expiration_Amendment_2__c</fullName>
    <formula>Contract_Number_Link_2__r.Services_Expiration_Amendment__c</formula>
    <label>Services Expiration Amendment 2</label>
    <type>Date</type>
</CustomField>