force-app/main/default/objects/Case/fields/Services_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Services_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Deprecated - to be removed</description>
    <label>Services Revenue - D</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>