force-app/main/default/objects/Case/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <inlineHelpText>Please provide the complete solution that was effective in solving the issue</inlineHelpText>
    <label>Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>