force-app/main/default/objects/Case/fields/Solution_Owner__c.field-meta.xml
<CustomField>
    <fullName>Solution_Owner__c</fullName>
    <label>Solution Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>*Unassigned*</fullName>
                <default>true</default>
                <label>*Unassigned*</label>
            </value>
            <value>
                <fullName>Mark Burgard</fullName>
            </value>
            <value>
                <fullName>Alastair Seddon</fullName>
            </value>
            <value>
                <fullName>Gary Rose</fullName>
            </value>
            <value>
                <fullName>Brian McMurrow</fullName>
            </value>
            <value>
                <fullName>Alejandro Arteaga</fullName>
            </value>
            <value>
                <fullName>Alan Gallagher</fullName>
            </value>
            <value>
                <fullName>Steven Wu</fullName>
            </value>
            <value>
                <fullName>Jeff Armbrecht</fullName>
            </value>
            <value>
                <fullName>Grace Camoglu</fullName>
            </value>
            <value>
                <fullName>Jesse Meredith</fullName>
            </value>
            <value>
                <fullName>Shane Combest</fullName>
            </value>
            <value>
                <fullName>Dan Harsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>