force-app/main/default/objects/Case/fields/SQL_Action__c.field-meta.xml
<CustomField>
    <fullName>SQL_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SQL Action</label>
    <type>Checkbox</type>
</CustomField>